[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bybit_p2p"
version = "1.1.0"
authors = [
  { name="Nickolay Kushnarenko", email="kolya@nk.ax" },
]
description = "Official Bybit P2P API integration library written in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "requests",
  "requests_toolbelt",
  "pycryptodome"
]

[project.urls]
Homepage = "https://github.com/bybit-exchange/bybit_p2p"
Issues = "https://github.com/bybit-exchange/bybit_p2p/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
